--- a/partners.html
+++ b/partners.html
@@ -38,20 +38,21 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="community.html" class="nav-link">Our Community</a></li>
+          <li class="nav-item"><a href="ccp.html" class="nav-link">CCP</a></li>
+
             <li class="nav-item"><a href="partners.html" class="nav-link">Partners</a></li>
             <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
             <li class="nav-item"><a href="oppertunities.html" class="nav-link">Opportunities</a></li>
             <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-             <li class="nav-item"><a href="ccp.html" class="nav-link">CCP</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg1.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/assets/bg1.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
@@ -68,7 +69,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="causes causes-2 text-center ftco-animate">
-              <div class="img" style="background-image: url(images/GirlsWhoCode.jpg);"></div>
+              <div class="img" style="background-image: url(images/partners/GirlsWhoCode.jpg);"></div>
               <h2>Girls Who Code</h2>
               <p>Community Partner</p>
 
@@ -78,7 +79,7 @@
           </div>
           <div class="col-md-4">
             <div class="causes causes-2 text-center ftco-animate">
-              <div class="img" style="background-image: url(images/DeveloperCirclesMoscowFromFacebook.jpg);"></div>
+              <div class="img" style="background-image: url(images/partners/DeveloperCirclesMoscowFromFacebook.jpg);"></div>
               <h2>Developer Circles Moscow from facebook</h2>
               <p>Community Partner</p>
 
@@ -91,7 +92,7 @@
       </div>
     </section>
 
-     <footer class="ftco-footer ftco-section img" style="background-image: url(images/footer.jpg);">
+     <footer class="ftco-footer ftco-section img" style="background-image: url(images/assets/footer.jpg);">
       <div class="overlay"></div>
       <div class="container">
         <div class="row mb-5">
@@ -148,9 +149,9 @@
 
     
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.osdfs.in" target="_blank">osDFS</a>
+  </p>
           </div>
         </div>
       </div>
