added the link about contributors covent and first PR

--- a/index.html
+++ b/index.html
@@ -92,40 +92,48 @@
       <div class="container">
         <div class="row no-gutters d-flex">
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://www.contributor-covenant.org/" target="_blank" rel="noopener">
             <div class="media block-6 text-center services d-block">
               <div class="icon"><span class="flaticon-charity"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Contributor Convenant</h3>
                 <p>	A code of conduct for open source projects</p>
               </div>
-            </div>      
+            </div> 
+            </a>     
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://yourfirstpr.github.io" target="_blank" rel="noopener">
             <div class="media block-6 text-center services active d-block">
               <div class="icon"><span class="flaticon-adoption"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Your First PR</h3>
                 <p>Help you get started contributing to open source by showcasing great starter issues on Github and elsew</p>
               </div>
-            </div>    
+            </div> 
+            </a>   
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://up-for-grabs.net" target="_blank" rel="noopener">
             <div class="media block-6 text-center services d-block">
               <div class="icon"><span class="flaticon-volunteer"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Up For Grabs</h3>
                 <p>A list of Projects which have curated tasks specifically for new contributors.These are great way to get started with a project</p>
               </div>
-            </div>      
+            </div>  
+            </a>    
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://firstcontributions.github.io" target="_blank" rel="noopener">
             <div class="media block-6 text-center services d-block">
               <div class="icon"><span class="flaticon-open-book"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">First Contributions</h3>
-                <p>Make your first open source contributions now.</p>
+                <p>🚀✨ Make your first open source contribution in 5 minutes.</p>
               </div>
-            </div>      
+            </div>  
+            </a>    
           </div>
         </div>
       </div>
