fixed follow url opener

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     						<div class="text py-5 pl-md-4 pr-md-3">
     							<h2 class="mb-4">OSDFS</h2>
     							<p>A special interest group that supports women & men who study or are interested in Computer and Information Science.</p>
-    							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfpGCP-crXkEYiSTeQlS8VdEa2pinn4fvFtxon8E1kbPPZRMAQ/viewform?usp=sf_link" class="btn btn-primary py-3 px-4">Join now</a></p>
+    							<p><a href="https://docs.google.com/forms/d/1Sec3zIrbFimSQc5TT9bXdmpa0mKEgNbqrfQiEC8K4SY/" class="btn btn-primary py-3 px-4">Join now</a></p>
     						</div>
     					</div>
     				</div>
@@ -145,11 +145,57 @@
 			<div class="container">
     		<div class="row justify-content-center">
           <div class="col-md-10 heading-section text-center ftco-animate">
-            <h2 class="mb-0"><a href="#">Join Us</a></h2>
+            <h2 class="mb-0"><a href="https://docs.google.com/forms/d/1Sec3zIrbFimSQc5TT9bXdmpa0mKEgNbqrfQiEC8K4SY/" target="_blank" rel="noopener">Join Us</a></h2>
           </div>
         </div>
     	</div>
-		</section>
+    </section>
+    
+
+    <section class="ftco-section ftco-causes">
+    	<div class="container">
+    		<div class="row justify-content-center pb-3">
+          <div class="col-md-6 heading-section text-center ftco-animate">
+            <h2 class="mb-4">Our Latest Projects</h2>
+
+          </div>
+        </div>
+        <div class="row">
+        	<div class="col-md-6 col-lg-4 d-flex align-self-stretch ftco-animate">
+            <div class="media block-8 text-center services active d-block">
+              <div class="icon"><span class="flaticon-open-book"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">YouthIcon</h3>
+                <p>Let's put Asia, Europe, North America, South America and Australia on NLP map. A living collection of NLP projects for Asians, by Asians.</p>
+                <p><a href="https://github.com/osDFS/YouthIcon" target="_blank" rel="noopener" class="btn btn-primary py-3 px-4">Join</a></p>
+              </div>
+            </div>    
+          </div>
+        	<div class="col-md-6 col-lg-4 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 text-center services active d-block">
+              <div class="icon"><span class="flaticon-open-book"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">osDFS-Chatbot</h3>
+                <p>A community-driven bot that aims to be as simple as possible to serve humans queries about osDFS.</p>
+                 <p><a href="https://github.com/osDFS/osDFS-Chatbot" target="_blank" rel="noopener" class="btn btn-primary py-3 px-4">Join </a></p>
+              </div>
+            </div>    
+          </div>
+          <div class="col-md-6 col-lg-4 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 text-center services active d-block">
+              <div class="icon"><span class="flaticon-open-book"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">C-Algorithms</h3>
+                <p>Contribute algorithms written in C language. It's beginner friendly!</p>
+                <p><a href="https://github.com/osDFS/C-Algorithms" class="btn btn-primary py-4 px-4" target="_blank" rel="noopener">Join</a></p>
+              </div>
+            </div>    
+          </div>
+        </div>
+        
+    	</div>
+    </section>
+
 
     <section class="ftco-section ftco-causes">
     	<div class="container">
@@ -250,9 +296,9 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Gallery</a></li>
-                <li><a href="#" class="py-2 d-block">Events</a></li>
-                <li><a href="#" class="py-2 d-block">Terms Condition</a></li>
+                <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
+                <li><a href="events.html" class="py-2 d-block">Events</a></li>
+                <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" class="py-2 d-block">Our Code of Conduct</a></li>
               </ul>
             </div>
           </div>
@@ -261,10 +307,10 @@
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Home</a></li>
-                <li><a href="#" class="py-2 d-block">Who we are</a></li>
-                <li><a href="#" class="py-2 d-block">Partners</a></li>
-                <li><a href="#" class="py-2 d-block">Blog</a></li>
-                <li><a href="#" class="py-2 d-block">Contact</a></li>
+                <li><a href="community.html" class="py-2 d-block">Who we are</a></li>
+                <li><a href="partners.html" class="py-2 d-block">Partners</a></li>
+                <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
           </div>
