--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -71,7 +72,7 @@
               <div class="col-lg-7">
                 <div class="text py-5 pl-md-4 pr-md-3">
                   <h2 class="mb-4">OSDFS</h2>
-                  <p>A special interest group that supports women & men who study or are interested in Computer and Information Science.</p>
+                  <p>A special interest group that supports women and men who study or are interested in Computer and Information Science.</p>
                   <p><a href="https://docs.google.com/forms/d/1Sec3zIrbFimSQc5TT9bXdmpa0mKEgNbqrfQiEC8K4SY/" class="btn btn-primary py-3 px-4">Join now</a></p>
                 </div>
               </div>
@@ -80,7 +81,7 @@
           <div class="col-md-6 d-flex align-items-center bg-primary">
             <div class="about-text px-3 py-5 pl-md-5 pr-md-5">
               <h2>Our Mission</h2>
-              <p>We are Open Source Digital Freedom Society. We are an off campus community that supports women & men that are interested in computer and information science and all tech things. We host tech talks, community events, and business leaders from all around the area on a weekly basis. Our goal is to create and inspire a strong community of women & men in technology fields. We aim to bring support, networking and mentoring to help women & men on your campus to find success in the classroom and in the office.</p>
+              <p>We are Open Source Digital Freedom Society. We are an off campus community that supports women and men that are interested in computer and information science and all tech things. We host tech talks, community events, and business leaders from all around the area on a weekly basis. Our goal is to create and inspire a strong community of women and men in technology fields. We aim to bring support, networking and mentoring to help women and men on your campus to find success in the classroom and in the office.</p>
               
             </div>
           </div>
@@ -92,40 +93,48 @@
       <div class="container">
         <div class="row no-gutters d-flex">
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://www.contributor-covenant.org/" target="_blank" rel="noopener">
             <div class="media block-6 text-center services d-block">
               <div class="icon"><span class="flaticon-charity"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Contributor Convenant</h3>
-                <p> A code of conduct for open source projects</p>
+                <p>	A code of conduct for open source projects</p>
               </div>
-            </div>      
+            </div> 
+            </a>     
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://yourfirstpr.github.io" target="_blank" rel="noopener">
             <div class="media block-6 text-center services active d-block">
               <div class="icon"><span class="flaticon-adoption"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Your First PR</h3>
                 <p>Help you get started contributing to open source by showcasing great starter issues on Github and elsew</p>
               </div>
-            </div>    
+            </div> 
+            </a>   
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://up-for-grabs.net" target="_blank" rel="noopener">
             <div class="media block-6 text-center services d-block">
               <div class="icon"><span class="flaticon-volunteer"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Up For Grabs</h3>
                 <p>A list of Projects which have curated tasks specifically for new contributors.These are great way to get started with a project</p>
               </div>
-            </div>      
+            </div>  
+            </a>    
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <a href="https://firstcontributions.github.io" target="_blank" rel="noopener">
             <div class="media block-6 text-center services d-block">
               <div class="icon"><span class="flaticon-open-book"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">First Contributions</h3>
-                <p>Make your first open source contributions now.</p>
+                <p>🚀✨ Make your first open source contribution in 5 minutes.</p>
               </div>
-            </div>      
+            </div>  
+            </a>    
           </div>
         </div>
       </div>
@@ -137,7 +146,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-10 heading-section text-center ftco-animate">
-            <h2 class="mb-0"><a href="https://docs.google.com/forms/d/1Sec3zIrbFimSQc5TT9bXdmpa0mKEgNbqrfQiEC8K4SY/">Join Us</a></h2>
+            <h2 class="mb-0"><a href="https://docs.google.com/forms/d/1Sec3zIrbFimSQc5TT9bXdmpa0mKEgNbqrfQiEC8K4SY/" target="_blank" rel="noopener">Join Us</a></h2>
           </div>
         </div>
       </div>
@@ -158,7 +167,7 @@
               <div class="media-body">
                 <h3 class="heading mb-3">YouthIcon</h3>
                 <p>Let's put Asia, Europe, North America, South America and Australia on NLP map. A living collection of NLP projects for Asians, by Asians.</p>
-                <p><a href="https://github.com/osDFS/YouthIcon" class="btn btn-primary py-3 px-4">Join</a></p>
+                <p><a href="https://github.com/osDFS/YouthIcon" target="_blank" rel="noopener" class="btn btn-primary py-3 px-4">Join</a></p>
               </div>
             </div>    
           </div>
@@ -168,7 +177,7 @@
               <div class="media-body">
                 <h3 class="heading mb-3">osDFS-Chatbot</h3>
                 <p>A community-driven bot that aims to be as simple as possible to serve humans queries about osDFS.</p>
-                 <p><a href="https://github.com/osDFS/osDFS-Chatbot" class="btn btn-primary py-3 px-4">Join </a></p>
+                 <p><a href="https://github.com/osDFS/osDFS-Chatbot" target="_blank" rel="noopener" class="btn btn-primary py-3 px-4">Join </a></p>
               </div>
             </div>    
           </div>
@@ -178,7 +187,7 @@
               <div class="media-body">
                 <h3 class="heading mb-3">C-Algorithms</h3>
                 <p>Contribute algorithms written in C language. It's beginner friendly!</p>
-                <p><a href="https://github.com/osDFS/C-Algorithms" class="btn btn-primary py-4 px-4">Join</a></p>
+                <p><a href="https://github.com/osDFS/C-Algorithms" target="_blank" rel="noopener" class="btn btn-primary py-4 px-4">Join</a></p>
               </div>
             </div>    
           </div>
@@ -194,7 +203,7 @@
       <div class="container">
         <div class="row justify-content-center pb-4">
           <div class="col-md-10 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Our Parteners</h2>
+            <h2 class="mb-4">Our Partners</h2>
 
           </div>
         </div>
@@ -279,9 +288,9 @@
               <h2 class="ftco-heading-2">OSDFS</h2>
               <p>Open Source Digital Freedom Society</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://twitter.com/dfs_os" target="_blank" rel="noopener"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/os-DFS-107559480713615" target="_blank" rel="noopener"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/osdfs1" target="_blank" rel="noopener"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -291,7 +300,7 @@
               <ul class="list-unstyled">
                 <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
                 <li><a href="events.html" class="py-2 d-block">Events</a></li>
-                <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" class="py-2 d-block">Terms Condition</a></li>
+                <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" target="_blank" rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
               </ul>
             </div>
           </div>
@@ -325,9 +334,9 @@
 
     
 
-          <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <p>
+              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.osdfs.in" target="_blank">osDFS</a>
+              </p>
           </div>
         </div>
       </div>
