--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="text py-5 pl-md-4 pr-md-3">
                   <h2 class="mb-4">OSDFS</h2>
                   <p>A special interest group that supports women and men who study or are interested in Computer and Information Science.</p>
-                  <p><a href="https://docs.google.com/forms/d/1Sec3zIrbFimSQc5TT9bXdmpa0mKEgNbqrfQiEC8K4SY/" class="btn btn-primary py-3 px-4">Join now</a></p>
+                  <p><a href="https://docs.google.com/forms/d/1Sec3zIrbFimSQc5TT9bXdmpa0mKEgNbqrfQiEC8K4SY/" target="_blank" rel="noopener" class="btn btn-primary py-3 px-4">Join now</a></p>
                 </div>
               </div>
             </div>
