--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <title>OSDFS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="/images/favicon.ico" />
+    <meta name="keywords" content="osDFS, Open Source, Digital Freedom Society, Men, Women, Technology, Computer Science, Information Science" />
+    <meta name="author" content="osDFS" />
+    <meta name="description" content="We are an off campus community that supports men & women that are interested in computer and information science and all things tech." />
+    <meta property="og:description" content="We are an off campus community that supports men & women that are interested in computer and information science and all things tech." />
+    <meta property="og:image" content="#" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:title" content="osDFS | Open Source Digital Freedom Society" />
+    <meta property="og:url" content=" http://osdfs.in/" />
+    <meta property="og:type" content="website" />
+
     
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
