fix footer issues and addedd details

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,16 @@
     <title>OSDFS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="/images/favicon.ico" />
+    <meta name="keywords" content="osDFS, Open Source, Digital Freedom Society, Men, Women, Technology, Computer Science, Information Science" />
+    <meta name="author" content="osDFS" />
+    <meta name="description" content="We are an off campus community that supports men & women that are interested in computer and information science and all things tech." />
+    <meta property="og:description" content="We are an off campus community that supports men & women that are interested in computer and information science and all things tech." />
+    <meta property="og:image" content="#" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:title" content="osDFS | Open Source Digital Freedom Society" />
+    <meta property="og:url" content=" https://www.osdfs.in/" />
+    <meta property="og:type" content="website" />
     
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap" rel="stylesheet">
@@ -73,7 +83,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3>Address</h3>
-	            <p>Not yet decided</p>
+	            <p>Kanpur, UttarPradesh</p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -82,7 +92,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3>Contact Number</h3>
-	            <p><a href="tel://1234567920">-</a></p>
+	            <p><a href="tel://+918299156635">+918299156635</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -100,7 +110,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3>Website</h3>
-	            <p><a href="#">osdfs.in</a></p>
+	            <p><a href="https://www.osdfs.in">osdfs.in</a></p>
 	          </div>
           </div>
         </div>
@@ -158,9 +168,9 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Gallery</a></li>
-                <li><a href="#" class="py-2 d-block">Events</a></li>
-                <li><a href="#" class="py-2 d-block">Terms Condition</a></li>
+                <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
+                <li><a href="events.html" class="py-2 d-block">Events</a></li>
+                <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" target="_blank" rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
               </ul>
             </div>
           </div>
@@ -169,10 +179,10 @@
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Home</a></li>
-                <li><a href="#" class="py-2 d-block">Who we are</a></li>
-                <li><a href="#" class="py-2 d-block">Partners</a></li>
-                <li><a href="#" class="py-2 d-block">Blog</a></li>
-                <li><a href="#" class="py-2 d-block">Contact</a></li>
+                <li><a href="community.html" class="py-2 d-block">Who we are</a></li>
+                <li><a href="partners.html" class="py-2 d-block">Partners</a></li>
+                <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
           </div>
