--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
               <span class="icon-map-signs"></span>
             </div>
             <h3>Address</h3>
-            <p>Not yet decided</p>
+            <p>Ranchi</p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
@@ -130,28 +130,30 @@
     <div class="container-fluid px-0">
       <div class="row no-gutters block-9">
         <div class="col-md-6 order-md-last d-flex">
-          <form action="#" class="bg-light p-5 contact-form">
+          <form action="https://getform.io/f/71b4a402-befe-4a8d-885b-306f94435979" method="POST" class="bg-light p-5 contact-form">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name">
+              <input type="text" class="form-control" name="name" placeholder="Your Name">
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Email">
+              <input type="email" name="email" class="form-control" placeholder="Your Email">
             </div>
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Subject">
             </div>
             <div class="form-group">
-              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+              <textarea name="message" id="" cols="30" rows="7"  class="form-control" placeholder="Message"></textarea>
             </div>
             <div class="form-group">
-              <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+              <input type="submit" type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
             </div>
           </form>
 
         </div>
 
         <div class="col-md-6 d-flex">
-          <div id="map" class="bg-white"></div>
+          <div id="map" class="bg-white">
+        <iframe width="650" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=85.19760131835939%2C23.23251286297142%2C85.67756652832033%2C23.600486617311272&amp;layer=mapnik&amp;marker=23.41662767587399%2C85.43792724609375" style="border: 1px solid black"></iframe><br/>
+          </div>
         </div>
       </div>
     </div>
@@ -245,9 +247,7 @@
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
+   
   <script src="js/main.js"></script>
 
 </body>
