--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,13 @@
 
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
-
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
-
   <link rel="stylesheet" href="css/aos.css">
-
   <link rel="stylesheet" href="css/ionicons.min.css">
-
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
-
-
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
@@ -130,30 +124,38 @@
     <div class="container-fluid px-0">
       <div class="row no-gutters block-9">
         <div class="col-md-6 order-md-last d-flex">
-          <form action="#" class="bg-light p-5 contact-form">
+          <form method="post" class="bg-light p-5 contact-form " onsubmit="event.preventDefault()">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name">
+              <input type="text" class="form-control" placeholder="Your Name" id="name" required>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Email">
+              <input type="email" class="form-control" placeholder="Your Email" id="email" required>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Subject">
+              <input type="text" class="form-control" placeholder="Subject" id="subject" required>
             </div>
             <div class="form-group">
-              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+              <textarea type="text" cols="30" rows="7" class="form-control" placeholder="Message" id="message"
+                required></textarea>
             </div>
             <div class="form-group">
-              <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+              <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" id="submit"
+                onclick="sendEmail()">
             </div>
           </form>
-
         </div>
 
-        <div class="col-md-6 d-flex">
-          <div id="map" class="bg-white"></div>
+        <div class="col-md-6 d-flex bg-white">
+          <div id="map" class="bg-white">
+            <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+              src="https://www.openstreetmap.org/export/embed.html?bbox=77.97031402587892%2C26.122767693778187%2C78.31020355224611%2C26.33096072593959&amp;layer=mapnik&amp;marker=26.22691079562366%2C78.1402587890625"
+              style="border: 1px solid black"></iframe><br /><a
+              href="https://www.openstreetmap.org/?mlat=26.2269&amp;mlon=78.1403#map=12/26.2269/78.1403"></a>
+          </div>
         </div>
       </div>
+
+    </div>
     </div>
   </section>
 
@@ -205,7 +207,7 @@
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">OSDFS</span></li>
 
-                <li><a href="#"><span class="icon icon-envelope"></span><span
+                <li><a href="#"><span class="icon icon-envelope"></span>&nbsp<span
                       class="text">codegirls.opensource@gmail.com</span></a></li>
               </ul>
             </div>
@@ -214,11 +216,6 @@
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
-
-
-
-
-
           <p>
             Copyright &copy;
             <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
@@ -229,9 +226,6 @@
       </div>
     </div>
   </footer>
-
-
-
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -245,11 +239,12 @@
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="js/contact-mail.js"></script>
   <script src="js/main.js"></script>
-
+  <!-- <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZtlFBxRugQA-2CZ69p7GUQJEjLy9ITWQ&sensor=false"></script>
+  <script src="js/google-map.js"></script> -->
 </body>
 
 </html>
