--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,11 @@
               <span class="icon-map-signs"></span>
             </div>
             <h3>Address</h3>
-            <p>Ranchi</p>
+            <p>B42, Kaka Vihar Colony
+               Behind khushal Vatika, Bhind Road
+               Land Mark, Abhinandan Vatika, Gwalior
+               MP, India
+            </p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
@@ -95,7 +99,7 @@
               <span class="icon-phone2"></span>
             </div>
             <h3>Contact Number</h3>
-            <p><a href="tel://1234567920">-</a></p>
+            <p><a href="tel://+918299156635">+918299156635</a></p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
@@ -113,7 +117,7 @@
               <span class="icon-globe"></span>
             </div>
             <h3>Website</h3>
-            <p><a href="#">osdfs.in</a></p>
+            <p><a href="https://www.osdfs.in">osdfs.in</a></p>
           </div>
         </div>
       </div>
