fix footer link issues

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block">Home</a></li>
+              <li><a href="https://www.osdfs.in" class="py-2 d-block">Home</a></li>
               <li><a href="community.html" class="py-2 d-block">Who we are</a></li>
               <li><a href="partners.html" class="py-2 d-block">Partners</a></li>
               <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
