--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section class="ftco-section ftco-no-pt ftco-no-pb ftco-volunteer">
     <div class="container-fluid px-md-0">
       <div class="row no-gutters">
-        <div class="col-md-6 img-volunteer" >
+        <div class="col-md-6 img-volunteer">
           <div class="row no-gutters justify-content-start">
             <div class="col-lg-7">
               <div class="text py-5 pl-md-4 pr-md-3">
@@ -360,7 +360,7 @@
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">OSDFS</span></li>
 
-                <li><a href="#"><span class="icon icon-envelope"></span><span
+                <li><a href="#"><span class="icon icon-envelope"></span>&nbsp<span
                       class="text">codegirls.opensource@gmail.com</span></a></li>
               </ul>
             </div>
@@ -369,14 +369,10 @@
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
-
-
-
           <p>
             Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.osdfs.in"
-              target="_blank">osDFS</a>
+            <script>document.write(new Date().getFullYear());</script> | All rights reserved
+            <a href="https://www.osdfs.in" target="_blank">osDFS</a>
           </p>
         </div>
       </div>
