--- a/contact.html
+++ b/contact.html
@@ -87,9 +87,9 @@
             </div>
             <h3>Address</h3>
             <p>B42, Kaka Vihar Colony
-               Behind khushal Vatika, Bhind Road
-               Land Mark, Abhinandan Vatika, Gwalior
-               MP, India
+              Behind khushal Vatika, Bhind Road
+              Land Mark, Abhinandan Vatika, Gwalior
+              MP, India
             </p>
           </div>
         </div>
@@ -129,6 +129,8 @@
       <div class="row no-gutters block-9">
         <div class="col-md-6 order-md-last d-flex">
           <form method="post" class="bg-light p-5 contact-form " onsubmit="event.preventDefault()">
+            <h2 class="text-center"> Leave Us A Message</h2>
+            <br/>
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Name" id="name" required>
             </div>
@@ -142,7 +144,7 @@
               <textarea type="text" cols="30" rows="7" class="form-control" placeholder="Message" id="message"
                 required></textarea>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center">
               <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" id="submit"
                 onclick="sendEmail()">
             </div>
@@ -189,7 +191,7 @@
               <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
               <li><a href="events.html" class="py-2 d-block">Events</a></li>
               <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" target="_blank"
-                rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
+                  rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
             </ul>
           </div>
         </div>
@@ -223,9 +225,8 @@
         <div class="col-md-12 text-center">
           <p>
             Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.osdfs.in"
-              target="_blank">osDFS</a>
+            <script>document.write(new Date().getFullYear());</script> | All rights reserved
+            <a href="https://www.osdfs.in" target="_blank">osDFS</a>
           </p>
         </div>
       </div>
