--- a/oppertunities.html
+++ b/oppertunities.html
@@ -127,7 +127,7 @@
               <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
               <li><a href="events.html" class="py-2 d-block">Events</a></li>
               <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" target="_blank"
-                rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
+                  rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
             </ul>
           </div>
         </div>
@@ -150,7 +150,7 @@
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">OSDFS</span></li>
 
-                <li><a href="#"><span class="icon icon-envelope"></span><span
+                <li><a href="#"><span class="icon icon-envelope"></span>&nbsp<span
                       class="text">codegirls.opensource@gmail.com</span></a></li>
               </ul>
             </div>
@@ -159,16 +159,10 @@
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
-
-
-
-
-
           <p>
             Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.osdfs.in"
-              target="_blank">osDFS</a>
+            <script>document.write(new Date().getFullYear());</script> | All rights reserved
+            <a href="https://www.osdfs.in" target="_blank">osDFS</a>
           </p>
         </div>
       </div>
