testing for scroll button in react

--- a/index.html
+++ b/index.html
@@ -379,9 +379,7 @@
     </div>
   </footer>
 
-
-
-
+  <div id="ScrollToTopBtn"></div>
 
 
   <script src="js/jquery.min.js"></script>
@@ -400,6 +398,12 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script> -->
   <script src="js/main.js"></script>
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+  <!-- Load our React component. -->
+  <script src="ScrollToTopBtn/ScrollToTopBtn.js"></script>
+  <script src="ScrollToTopBtn/ScrollToTopBtn.css"></script>
 
 </body>
 
