--- a/blog-single.html
+++ b/blog-single.html
@@ -69,11 +69,12 @@
   </nav>
   <!-- END nav -->
 
-  <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/assets/bg1.jpg');"
+  <section class="hero-wrap hero-wrap-2 js-fullheight"
+    style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.644), rgba(32, 32, 32, 0.575)),url('images/assets/bg1.jpg');"
     data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
-      <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+      <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate pb-5 text-center">
           <h2 class="mb-3 bread">Blog Details</h2>
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
@@ -187,11 +188,6 @@
       </div>
     </div>
   </footer>
-
-
-
-
-
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
