--- a/gallery.html
+++ b/gallery.html
@@ -68,16 +68,18 @@
   </nav>
   <!-- END nav -->
 
-  <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/assets/bg1.jpg');"
+  <section class="hero-wrap hero-wrap-2 js-fullheight" 
+    style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.644), rgba(32, 32, 32, 0.575)),url('images/assets/bg1.jpg');"
     data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
-      <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+      <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate pb-5 text-center">
           <h2 class="mb-3 bread">Gallery</h2>
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
                   class="ion-ios-arrow-forward"></i></a></span> <span>Gallery<i
-                class="ion-ios-arrow-forward"></i></span></p>
+                class="ion-ios-arrow-forward"></i></span>
+          </p>
         </div>
       </div>
     </div>
