--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
   </nav>
   <!-- END nav -->
 
-  <div class="hero-wrap" style="background-image: url('images/assets/bg1.jpg');" data-stellar-background-ratio="0.5">
+  <div class="hero-wrap"
+    style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.726), rgba(24, 24, 24, 0.678)),url('images/assets/bg1.jpg');"
+    data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
         data-scrollax-parent="true">
         <div class="col-md-12 text ftco-animate mt-5 text-center" data-scrollax=" properties: { translateY: '70%' }">
-
           <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Open Source Digital Freedom
             Society</h1>
         </div>
@@ -168,7 +169,8 @@
   </section>
 
 
-  <section class="ftco-section ftco-vol img" style="background-image: url(images/assets/bg1.jpg)">
+  <section class="ftco-section ftco-vol img"
+    style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.459), rgba(24, 24, 24, 0.301)),url('images/assets/bg1.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row justify-content-center">
@@ -263,7 +265,7 @@
   </section>
 
   <section class="ftco-counter ftco-section img" id="section-counter"
-    style="background-image: url(images/assets/bg1.jpg);">
+    style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.644), rgba(32, 32, 32, 0.575)),url('images/assets/bg1.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row d-md-flex align-items-center">
@@ -306,10 +308,6 @@
       </div>
     </div>
   </section>
-
-
-
-
 
 
   <footer class="ftco-footer ftco-section img" style="background-image: url(images/assets/footer.jpg);">
