--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
     </div>
   </nav>
   <!-- END nav -->
-
   <div class="hero-wrap"
     style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.726), rgba(24, 24, 24, 0.678)),url('images/assets/bg1.jpg');"
     data-stellar-background-ratio="0.5">
@@ -398,7 +397,10 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script> -->
   <script src="js/main.js"></script>
-
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
+  <script src="js/react-scrollbar.js" type="text/babel"></script> -->
 </body>
 
 </html>
