Added scroll to top button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -375,7 +376,10 @@
       </div>
     </div>
   </footer>
-
+  <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button">
+    <i class="fa fa-chevron-up"></i>
+  </a>
+  
 
 
 
@@ -393,10 +397,8 @@
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <!-- <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script> -->
   <script src="js/main.js"></script>
+  <script src="js/scroll-to-top.js"></script>
 </body>
 
 </html>
