--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <meta property="og:url" content=" https://www.osdfs.in/" />
   <meta property="og:type" content="website" />
 
-
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
 
@@ -46,6 +46,37 @@
 </head>
 
 <body>
+  <!-- Loading Animation -->
+  <div id="loaderAnim">
+    <div class="boxes">
+      <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </div>
+  <!--End loading Animation-->
+  
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container-fluid px-lg-5">
       <a class="navbar-brand" href="index.html">OSDFS</a>
@@ -379,7 +410,7 @@
   <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button">
     <i class="fa fa-chevron-up"></i>
   </a>
-  
+
 
 
 
@@ -399,6 +430,7 @@
   <script src="js/scrollax.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/scroll-to-top.js"></script>
+  <script src="js/removingLoader.js"></script>
 </body>
 
 </html>
