--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
             <div class="icon"><span class="flaticon-open-book"></span></div>
             <div class="media-body">
               <h3 class="heading mb-3">YouthIcon</h3>
-              <p>Let's put Asia, Europe, North America, South America and Australia on NLP map. A living collection of
-                NLP projects for Asians, by Asians.</p>
+              <p>Let's put India on NLP map. YouthIcon as the name suggest will be a research effort for NLP for Indian languages that is LOW RESOURCED, OPEN SOURCE, CONTRY-WIDE, DISTRIBUTED and ONLINE. </p>
               <p><a href="https://github.com/osDFS/YouthIcon" target="_blank" rel="noopener"
                   class="btn btn-primary py-3 px-4">Join</a></p>
             </div>
