--- a/team_form.html
+++ b/team_form.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="signup-content">
                 <div class="signup-img">
-                  <img src="images/assets/bg_form.jpg"/>
+                  <img src="images/assets/bg_form.jpg" class="img-fluid"/>
                     <div class="signup-img-content">
 
                         <h2>Join Us </h2>
