changes in our community page

--- a/community.html
+++ b/community.html
@@ -36,10 +36,13 @@
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
 
-
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/community.css">
 </head>
 
 <body>
@@ -69,61 +72,173 @@
   <!-- END nav -->
 
   <section class="hero-wrap hero-wrap-2 js-fullheight"
-    style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.644), rgba(32, 32, 32, 0.575)),url('images/assets/bg1.jpg');"
-    data-stellar-background-ratio="0.5">
+  style="background-image: linear-gradient(to bottom, rgba(32, 32, 32, 0.644), rgba(32, 32, 32, 0.575)),url('images/assets/bg1.jpg');" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate pb-5 text-center">
           <h2 class="mb-3 bread">Know about our Community</h2>
-          <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span>Our Community <i
-                class="ion-ios-arrow-forward"></i></span></p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="ftco-section ftco-causes">
+  <section id="team" class="pb-5">
     <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="causes causes-2 text-center ftco-animate">
-            <div class="img" style="background-image: url(images/officers/Ruchika.jpg);"></div>
-            <h2>Ruchika</h2>
-            <p>College: Amritsar College of Engineering and Technology</p>
-
-            <p> Major: Computer Science Engeneering</p>
-
-          </div>
+        <h5 class="section-title h1">OUR TEAM</h5>
+        <div class="row">
+  
+            <!-- Team member -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                   <div class="image-flip" >
+                      <div class="mainflip flip-0">
+                          <div class="frontside">
+                              <div class="card">
+                                   <div class="card-body text-center">
+                                        <p><img class=" img-fluid" src="images/officers/Rohit.jpg" alt="card image"></p>
+                                        <h4 class="card-title">Rohit Rathore</h4>
+                                        <p class="card-text">He is the Representative and his technical interest lies in the intersection of Machine Learning and systems.</p>
+                                        <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                   </div>
+                              </div>
+                          </div>
+                          <div class="backside">
+                              <div class="card">
+                                  <div class="card-body text-center mt-4">
+                                      <h4 class="card-title">Rohit Rathore</h4>
+                                      <p class="card-text">Rohit is the representative of osDFS. He is an Integrated Masters student in Mathematics & Computing at Birla Institute of Technology, Mesra. He is passionate about open source and all things tech-related.</p>
+                                      <ul class="list-inline">
+                                          <li class="list-inline-item">
+                                              <a class="social-icon text-xs-center" target="_blank" href="https://www.facebook.com/rohitrathore4">
+                                                  <i class="fa fa-facebook"></i>
+                                              </a>
+                                          </li>
+                                          <li class="list-inline-item">
+                                              <a class="social-icon text-xs-center" target="_blank" href="https://twitter.com/rohit_rathore2">
+                                                  <i class="fa fa-twitter"></i>
+                                              </a>
+                                          </li>
+                                          <li class="list-inline-item">
+                                              <a class="social-icon text-xs-center" target="_blank" href="https://www.linkedin.com/in/rohit-singh-rathaur/">
+                                                  <i class="fa fa-linkedin"></i>
+                                              </a>
+                                          </li>
+                                          <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://github.com/TeAmp0is0N">
+                                                <i class="fa fa-github"></i>
+                                            </a>
+                                        </li>
+                                      </ul>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!-- ./Team member -->
+              <!-- Team member -->
+              <div class="col-xs-12 col-sm-6 col-md-4">
+                  <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                      <div class="mainflip">
+                          <div class="frontside">
+                              <div class="card">
+                                  <div class="card-body text-center">
+                                      <p><img class=" img-fluid" src="images/officers/Ruchika.jpg" alt="card image"></p>
+                                      <h4 class="card-title">Ruchika</h4>
+                                      <p class="card-text">She is the representative and her interest lies in Software Development and Community development.</p>
+                                      <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="backside">
+                              <div class="card">
+                                  <div class="card-body text-center mt-4">
+                                      <h4 class="card-title">Ruchika</h4>
+                                      <p class="card-text">Ruchika is representative of osDFS. She has done her undergraduation from Amritsar College of Engineering. She is responsible for community Management. Her interests lies in Information Technology.</p>
+                                      <ul class="list-inline">
+                                          <li class="list-inline-item">
+                                              <a class="social-icon text-xs-center" target="_blank" href="https://www.facebook.com/ruchika.syal.1">
+                                                  <i class="fa fa-facebook"></i>
+                                              </a>
+                                          </li>
+                                          <li class="list-inline-item">
+                                              <a class="social-icon text-xs-center" target="_blank" href=" https://twitter.com/Ruchika_10">
+                                                  <i class="fa fa-twitter"></i>
+                                              </a>
+                                          </li>
+                                          <li class="list-inline-item">
+                                              <a class="social-icon text-xs-center" target="_blank" href="https://www.linkedin.com/in/ruchika-99a3a0154">
+                                                  <i class="fa fa-linkedin"></i>
+                                              </a>
+                                          </li>
+                                          <li class="list-inline-item">
+                                              <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                  <i class="fa fa-github"></i>
+                                              </a>
+                                          </li>
+                                      </ul>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!-- ./Team member -->
+              <!-- Team member -->
+              <div class="col-xs-12 col-sm-6 col-md-4">
+                  <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                      <div class="mainflip">
+                          <div class="frontside">
+                              <div class="card">
+                                  <div class="card-body text-center">
+                                      <p><img class=" img-fluid" src="images/officers/Rishika.jpg" alt="card image"></p>
+                                      <h4 class="card-title">Rishika Sharma</h4>
+                                      <p class="card-text">She is the community representative and she is an Undergraduate Student Researcher at IIIT Hyderabad.</p>
+                                      <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="backside">
+                              <div class="card">
+                                  <div class="card-body text-center mt-4">
+                                      <h4 class="card-title">Rishika Sharma</h4>
+                                      <p class="card-text">Rishika is the representative of osDFS. She is a Masters student in Computer and Natural Science at IIIT, Hyderabad. </p>
+                                      <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <i class="fa fa-facebook"></i>
+                                            </a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://twitter.com/its_rishika31">
+                                                <i class="fa fa-twitter"></i>
+                                            </a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://www.linkedin.com/in/rishika-sharma-067286194/">
+                                                <i class="fa fa-linkedin"></i>
+                                            </a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <i class="fa fa-github"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!-- ./Team member -->
+              
         </div>
-        <div class="col-md-4">
-          <div class="causes causes-2 text-center ftco-animate">
-            <div class="img" style="background-image: url(images/officers/Rohit.jpg);"></div>
-            <h2>Rohit Rathore</h2>
-            <p>College: Birla Institute of Technology, Mesra</p>
-
-            <p>Major: Mathematics & Computing</p>
-
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="causes causes-2 text-center ftco-animate">
-            <div class="img" style="background-image: url(images/officers/Rishika.jpg);"></div>
-            <h2>Rishika Sharma</h2>
-            <p>College: International Institute of Information Technology, Hyderabad</p>
-
-            <p>Major: Computer Science + Natural Science (CND Branch)</p>
-
-          </div>
-        </div>
-
-      </div>
-
     </div>
-  </section>
+</section>
 
-  <footer class="ftco-footer ftco-section img" style="background-image: url(images/assets/footer.jpg);">
+
+<footer class="ftco-footer ftco-section img" style="background-image: url(images/assets/footer.jpg);">
     <div class="overlay"></div>
     <div class="container">
       <div class="row mb-5">
