move javascripts libraries to the scripts folder

--- a/team_form.html
+++ b/team_form.html
@@ -111,9 +111,9 @@
     </div>
 
    
-    <script src="js/jquery.min.js"></script>
+    <script src="js/scripts/jquery.min.js"></script>
     
 
-    <script src="js/team.js"></script>
+    <script src="js/JoiningForm.js"></script>
 </body>
 </html>
