--- a/ccp.html
+++ b/ccp.html
@@ -161,21 +161,21 @@
 
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
+  <script src="js/scripts/jquery.min.js"></script>
+  <script src="js/scripts/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/scripts/popper.min.js"></script>
+  <script src="js/scripts/bootstrap.min.js"></script>
+  <script src="js/scripts/jquery.easing.1.3.js"></script>
+  <script src="js/scripts/jquery.waypoints.min.js"></script>
+  <script src="js/scripts/jquery.stellar.min.js"></script>
+  <script src="js/scripts/owl.carousel.min.js"></script>
+  <script src="js/scripts/jquery.magnific-popup.min.js"></script>
+  <script src="js/scripts/aos.js"></script>
+  <script src="js/scripts/jquery.animateNumber.min.js"></script>
+  <script src="js/scripts/scrollax.min.js"></script>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
+  <script src="js/scripts/google-map.js"></script>
   <script src="js/main.js"></script>
 
 </body>
