moved css libraries to the libraries and bootstrap floder

--- a/JoiningForm.html
+++ b/JoiningForm.html
@@ -8,7 +8,7 @@
 
   
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="css/team.css">
+    <link rel="stylesheet" href="css/JoiningForm.css">
 </head>
 <body>
 
