--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/loadingAnimation.css">
-  <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/bootstrap/open-iconic-bootstrap.min.css">
+  <link rel="stylesheet" href="css/libraries/animate.css">
 
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/libraries/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/libraries/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
 
   <link rel="stylesheet" href="css/aos.css">
@@ -125,7 +125,7 @@
                 <h2 class="mb-4">OSDFS</h2>
                 <p>A special interest group that supports women and men who study or are interested in Computer and
                   Information Science.</p>
-                <p><a href="team_form.html"
+                <p><a href="JoiningForm.html"
                     target="_blank" rel="noopener" class="btn btn-primary py-3 px-4">Join now</a></p>
               </div>
             </div>
@@ -206,7 +206,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-10 heading-section text-center ftco-animate">
-          <h2 class="mb-0"><a href="team_form.html"
+          <h2 class="mb-0"><a href="JoiningForm.html"
               target="_blank" rel="noopener">Join Us</a></h2>
         </div>
       </div>
